buildscript {
    ext {
        queryDslVersion = "5.1.0"
        springBootVersion = "3.1.10"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.neighbor21'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.projectlombok:lombok-mapstruct-binding:0.1.0' // MapStruct 관련 추가

    // MapStruct
    compileOnly 'org.mapstruct:mapstruct:1.5.5.Final' // 최신 안정 버전으로 업데이트
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Unirest for HTTP requests
    implementation 'com.konghq:unirest-java:3.11.11'

    // Jackson for JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'

    // Logback
    implementation 'ch.qos.logback:logback-classic:1.4.14'

    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql:42.5.0'

    // Resilience4j
    implementation 'io.github.resilience4j:resilience4j-core:1.7.0'
    implementation 'io.github.resilience4j:resilience4j-retry:1.7.0'
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}
